# backend/server/Project/Students/students.routes.js
@@ -4,7 +4,7 @@ const router = express.Router();
 const students = require("./service/students");
 
 router.get("", students.onQuerys);
-router.post("/explorers", students.onQuerys);
+router.post("/explorers", students.onQuery);
 router.post("", students.onCreate);
 router.put( "", students.onUpdate);
 router.delete( "", students.onDelete);
